--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <h1>
-    Tropicali
+    Tropical
 </h1>
+
+<p>Tropicali's new restaurant in the heart of Santa Fe.</p>
+
+<p>Site launching in March.</p>
