--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <h1>
-            Tropical
-        </h1>
+        <h1><img src="img/logo.svg" alt="Tropicali"></h1>
         
         <p>Tropicali's new restaurant in the heart of Santa Fe.</p>
         
